api-image-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-image-svc
  labels:
    app: api-image
spec:
  type: ClusterIP  # Usamos ClusterIP si los pods están dentro del clúster y no fuera
  #sessionAffinity: ClientIP  # Esta línea habilita sticky sessions
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: api-image
