ingress.yaml
apiVersion: networking.k8s.io/v1 # Para versiones posteriores a 1.14, usa networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: apidespliegue.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-image-svc
            port:
              number: 8083
